bug on overflow-x in mobile phones

--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,6 @@ body{
     line-height: 1;
     font-weight: 400;
     color: #555;
-    overflow-x: hidden;
 }
 
 strong{
